# agent-sandboxing

./: .env.example  .gitignore  CLAUDE.md  README.md  hello.py  next.config.mjs  package-lock.json  package.json  pyproject.toml  spec.md
frontend/ai-sdk-starter-deepinfra/: .env.example  instrumentation.ts  package-lock.json  package.json
frontend/ai-sdk-starter-deepinfra/ai/: providers.ts
frontend/ai-sdk-starter-deepinfra/app/: globals.css  layout.tsx
frontend/ai-sdk-starter-deepinfra/app/api/agent/cancel/: route.ts
frontend/ai-sdk-starter-deepinfra/app/api/agent/start/: route.ts
frontend/ai-sdk-starter-deepinfra/app/api/chat/: route.ts
frontend/ai-sdk-starter-deepinfra/components/: chat.tsx  inline-agent-status.tsx  message.tsx  messages.tsx  mode-toggle.tsx  model-picker.tsx  project-overview.tsx  status-panel.tsx  textarea.tsx
frontend/ai-sdk-starter-deepinfra/lib/: db.ts  modal.ts  redis.ts
frontend/ai-sdk-starter-deepinfra/prisma/: schema.prisma
modal_agent/: __init__.py  app.py  config.py  executor.py  pyproject.toml  tools.py  webhook.py
modal_agent/.claude/agents/: issue-architect.md  scope-analyzer.md
modal_agent/.claude/commands/: plan-feature.md
prisma/: schema.prisma
src/app/: layout.tsx  page.tsx
src/app/api/agent/respond/: route.ts
src/app/api/agent/start/: route.ts
src/app/api/agent/webhook/: route.ts
src/app/api/chat/: route.ts
src/lib/: redis.ts
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_modal_executor.py  test_single_container.py  test_webhook.py
tests/unit/: __init__.py  test_tools.py
(+4 files in other folders)
