[project]
name = "agent-sandboxing"
version = "0.1.0"
description = "Human-in-the-Loop Agent System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
modal = [
    "claude-agent-sdk",
    "httpx",
    "modal",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
