[project]
name = "human-in-the-loop-agent"
version = "0.1.0"
description = "Human-in-the-Loop Agent System with checkpoint/resume pattern"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "httpx>=0.27.0",
    "modal>=0.70.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "asyncio: mark test as async",
]
